maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: ';' expected but '=' found.
a:Int=Xo+Yo
     ^